# obscura

./: .rgignore  README.md  README.md.in  ci-matrix.sh  flake.nix  hashes  hashes.json  infuse.nix
.github/workflows/: build.yml  main.yml  nix-github-actions.yml  nixpkgs-update.yml  nvidia.yaml  update.yml
legacy/: README.org
legacy/9mount/: default.nix  module.nix  unpriv.patch
legacy/CatgirlDownloader/: configdir.patch  default.nix
legacy/capnp-go/: default.nix
legacy/email-oauth2-proxy/: url-append.patch
legacy/ferroxide/: default.nix
legacy/fusepod/: default.nix
legacy/hq/: default.nix
legacy/i915ovmfPkg/: default.nix
legacy/libhpke/: fix-include.patch
legacy/msp-cgt/: default.nix
legacy/mwxml2sql/: 0001-Makefile-remove-hardcoded-tool-paths.patch  0002-Makefile-dont-install-into-usr.patch  default.nix
legacy/ncps-db-helper/: main.sh
legacy/pcr-oracle/: default.nix  fix.patch
legacy/pmemstat/: default.nix
legacy/redis-json/: rustflags.patch
legacy/rustdesk-api/: default.nix
legacy/samloader/: default.nix
legacy/sfnt2woff-zopfli/: default.nix
templates/c/: .envrc  .gitignore  Justfile  Makefile  flake.nix  meson.build
templates/c/src/: main.c
templates/default/: .gitignore  flake.nix
templates/elixir/: .envrc  flake.nix  mix.exs
templates/go/: flake.nix
templates/haskell/: .gitignore  .hlint.yaml  example.cabal  flake.nix  package.yaml
templates/js/: .envrc  .gitignore  flake.nix  index.html  main.ts  vite.config.ts
templates/latex/: .gitignore  flake.nix
templates/python/: .gitignore  flake.nix  pyproject.toml
(+8 files in other folders)
