cabal-version:      3.0
name:               example
version:            0.1.0.0
-- synopsis:
-- description:
license:            GPL-3.0-only
license-file:       LICENSE
author:             Leon Schumacher
maintainer:         leonsch@protonmail.com
-- copyright:
build-type:         Simple
-- extra-doc-files:
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable example
    import:           warnings
    hs-source-dirs:   app
    default-language: Haskell2010

    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:

    build-depends:
      base,
      relude,
      flow,

    mixins:
      base hiding (Prelude),
      relude (Relude as Prelude),
      relude,
